# melvor-helper

./: README.md  pyproject.toml
melvor/: __init__.py  combat.py  cooking.py  crafting.py  drop.py  food.py  smithing.py  thieving.py  util.py
tests/: test_cooking.py  test_crafting.py
