[tool.poetry]
name = "melvor-helper"
version = "0.1.0"
description = "Helper calculator for Melvor Idle game"
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
green = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
